--- a/reference.bib
+++ b/reference.bib
@@ -37,7 +37,6 @@
   year      = {2018}
 }
 
-
 @article{Adams2009,
   author  = {Adams, Andrew and Gelfand, Natasha and Dolson, Jennifer and Levoy, Marc},
   title   = {Gaussian {KD-trees} for fast high-dimensional filtering},
@@ -57,6 +56,7 @@
   number  = {2}
 }
 
+
 @inproceedings{Adamson2003,
   author    = {Adamson, Anders and Alexa, Marc},
   title     = {Approximating and intersecting surfaces from points},
@@ -71,6 +71,7 @@
   title     = {The conversation: Deep audio-visual speech enhancement},
   year      = {2018}
 }
+
 
 @inproceedings{Alayrac2020,
   title     = {Self-Supervised MultiModal Versatile Networks},
@@ -96,7 +97,6 @@
   year      = {2009}
 }
 
-
 @inproceedings{Ankerst1999,
   author    = {Ankerst, Mihael and Kastenm{\"u}ller, Gabiand Kriegel, Hans-Peter and Seidl, Thomas},
   booktitle = {Advances in Spatial Databases},
@@ -111,12 +111,14 @@
   year      = {2019}
 }
 
+
 @inproceedings{Armeni2016,
   title     = {{3D} Semantic Parsing of Large-Scale Indoor Spaces},
   author    = {Iro Armeni and Ozan Sener and Amir R. Zamir and Helen Jiang and Ioannis Brilakis and Martin Fischer and Silvio Savarese},
   booktitle = CVPR,
   year      = {2016}
 }
+
 
 @article{Armeni2017,
   title   = {Joint {2D-3D}-Semantic Data for Indoor Scene Understanding},
@@ -157,11 +159,11 @@
   year      = {2020}
 }
 
-@article{Atzmon2020a,
-  title   = {{SAL++}: Sign Agnostic Learning with Derivatives},
-  author  = {Atzmon, Matan and Lipman, Yaron},
-  journal = {arXiv preprint arXiv:2006.05400},
-  year    = {2020}
+@inproceedings{Atzmon2021,
+  title     = {{SALD}: Sign Agnostic Learning with Derivatives},
+  author    = {Atzmon, Matan and Lipman, Yaron},
+  booktitle = ICLR,
+  year      = {2021}
 }
 
 @article{Au2012,
@@ -189,7 +191,6 @@
   year    = {2016}
 }
 
-
 @article{Badrinarayanan2017,
   author  = {Badrinarayanan, Vijay and Kendall, Alex and Cipolla, Roberto},
   title   = {Segnet: A deep convolutional encoder-decoder architecture for image segmentation},
@@ -211,6 +212,7 @@
   booktitle = CVPR,
   year      = {2016}
 }
+
 
 @inproceedings{Bai2021,
   title     = {Unsupervised multi-source domain adaptation for person re-identification},
@@ -268,7 +270,6 @@
   year    = {2002}
 }
 
-
 @article{Bengio2013,
   author  = {Y. {Bengio} and A. {Courville} and P. {Vincent}},
   journal = TPAMI,
@@ -296,13 +297,13 @@
   number  = {2}
 }
 
+
 @inproceedings{Bogo2014,
   title     = {{FAUST}: Dataset and evaluation for {3D} mesh registration},
   author    = {Bogo, Federica and Romero, Javier and Loper, Matthew and Black, Michael J},
   booktitle = CVPR,
   year      = {2014}
 }
-
 
 @inproceedings{Bogo2017,
   title     = {Dynamic {FAUST}: Registering human bodies in motion},
@@ -328,6 +329,7 @@
   volume  = {32},
   number  = {4}
 }
+
 
 @article{Bommes2013a,
   author  = {Bommes, David and L\'{e}vy, Bruno and Pietroni, Nico and Puppo, Enrico and Silva, Claudio and Tarini, Marco and Zorin, Denis},
@@ -483,7 +485,6 @@
   year    = {2015}
 }
 
-
 @inproceedings{Chang2017,
   author    = {Chang, Angel and Dai, Angela and Funkhouser, Thomas and Halber, Maciej and Niessner, Matthias and Savva, Manolis and Song, Shuran and Zeng, Andy and Zhang, Yinda},
   title     = {{Matterport3D}: Learning from {RGB-D} Data in Indoor Environments},
@@ -507,6 +508,7 @@
   booktitle = CGF
 }
 
+
 @article{Chen2009,
   author  = {Xiaobai Chen and Aleksey Golovinskiy and Thomas Funkhouser},
   title   = {A benchmark for {3D} mesh segmentation},
@@ -523,7 +525,6 @@
   year      = {2014}
 }
 
-
 @article{Chen2018,
   author  = {L. {Chen} and G. {Papandreou} and I. {Kokkinos} and K. {Murphy} and A. L. {Yuille}},
   title   = {{DeepLab}: Semantic Image Segmentation with Deep Convolutional Nets, Atrous Convolution, and Fully Connected {CRFs}},
@@ -532,7 +533,6 @@
   volume  = {40},
   number  = {4}
 }
-
 
 @inproceedings{Chen2019,
   title     = {Learning implicit fields for generative shape modeling},
@@ -547,6 +547,7 @@
   booktitle = ICCV,
   year      = {2019}
 }
+
 
 @inproceedings{Chen2020,
   title     = {A simple framework for contrastive learning of visual representations},
@@ -587,7 +588,6 @@
   number  = {4}
 }
 
-
 @inproceedings{Choy2016,
   author    = {Choy, Christopher B and Xu, Danfei and Gwak, JunYoung and Chen, Kevin and Savarese, Silvio},
   title     = {{3D-R2N2}: A unified approach for single and multi-view {3D} object reconstruction},
@@ -602,6 +602,7 @@
   year      = {2019}
 }
 
+
 @article{Chuang2011,
   author  = {Chuang, Ming and Kazhdan, Michael},
   title   = {Interactive and anisotropic geometry processing using the screened Poisson equation},
@@ -610,6 +611,7 @@
   volume  = {30},
   number  = {4}
 }
+
 
 @article{Cignoni1998,
   author  = {P. Cignoni and C. Rocchini and R. Scopigno},
@@ -802,7 +804,6 @@
   number  = {6}
 }
 
-
 @article{ElOuafdi2008,
   author  = {El Ouafdi, A.F. and Ziou, D. and Krim, H.},
   title   = {A smart stochastic approach for manifolds smoothing},
@@ -811,7 +812,6 @@
   volume  = {27},
   number  = {5}
 }
-
 
 @article{Engel2021,
   title   = {Point transformer},
@@ -840,6 +840,7 @@
   number  = {2}
 }
 
+
 @inproceedings{Fan2017,
   author    = {Fan, Haoqiang and Su, Hao and Guibas, Leonidas},
   title     = {A point set generation network for {3D} object reconstruction from a single image},
@@ -853,6 +854,7 @@
   booktitle = CVPR,
   year      = {2014}
 }
+
 
 @inproceedings{Fey2018,
   title     = {{SplineCNN}: Fast Geometric Deep Learning with Continuous {B}-Spline Kernels},
@@ -950,14 +952,12 @@
   year      = {2016}
 }
 
-
 @inproceedings{Glorot2011,
   title     = {Deep sparse rectifier neural networks},
   author    = {Glorot, Xavier and Bordes, Antoine and Bengio, Yoshua},
   booktitle = {International Conference on Artificial Intelligence and Statistics},
   year      = {2011}
 }
-
 
 @article{Golovinskiy2008,
   author  = {Golovinskiy, Aleksey and Funkhouser, Thomas},
@@ -977,12 +977,14 @@
   number  = {3}
 }
 
+
 @book{Goodfellow2016,
   title     = {Deep Learning},
   year      = {2016},
   author    = {Ian Goodfellow and Yoshua Bengio and Aaron Courville},
   publisher = {MIT Press}
 }
+
 
 @inproceedings{Goodfellow2016a,
   author    = {Ian Goodfellow and Jean Pouget-Abadie and Mehdi Mirza and Bing Xu and David Warde-Farley and Sherjil Ozair and Aaron Courville and Yoshua Bengio},
@@ -1019,14 +1021,12 @@
   year      = {2020}
 }
 
-
 @inproceedings{Gropp2020,
   title     = {Implicit geometric regularization for learning shapes},
   author    = {Gropp, Amos and Yariv, Lior and Haim, Niv and Atzmon, Matan and Lipman, Yaron},
   booktitle = ICML,
   year      = {2020}
 }
-
 
 @inproceedings{Groueix2018,
   author    = {Thibault Groueix and Matthew Fisher and Vladimir G. Kim and Bryan C. Russell and Mathieu Aubry},
@@ -1044,12 +1044,14 @@
   number  = {3}
 }
 
+
 @misc{Guennebaud2010,
   author       = {Ga\"{e}l Guennebaud and Beno\^{i}t Jacob and others},
   title        = {Eigen v3},
   howpublished = {http://eigen.tuxfamily.org},
   year         = {2010}
 }
+
 
 @article{Guerrero2018,
   author  = {Paul Guerrero and Yanir Kleiman and Maks Ovsjanikov and Niloy J. Mitra},
@@ -1630,7 +1632,6 @@
   year      = {2017}
 }
 
-
 @inproceedings{Kobbelt1998,
   author    = {Kobbelt, L. and Campagna, S. and Vorsatz, J. AND Seidel, H.-P.},
   title     = {Interactive multi-resolution modeling on arbitrary meshes},
@@ -1652,6 +1653,7 @@
   year      = {1999},
   volume    = {1666}
 }
+
 
 @article{Kopf2007,
   author  = {Kopf, Johannes and Cohen, Michael F. and Lischinski, Dani and Uyttendaele, Matt},
@@ -1744,14 +1746,12 @@
   year      = {2015}
 }
 
-
 @inproceedings{Lei2020,
   title     = {Analytic Marching: An Analytic Meshing Solution from Deep Implicit Surface Networks},
   author    = {Jiabao Lei and Kui Jia},
   booktitle = ICML,
   year      = {2020}
 }
-
 
 @article{Leon2008,
   title   = {Volume octree with an implicitly defined dual grid},
@@ -1770,6 +1770,7 @@
   editor    = {Jiao, Xiangmin and Weill, Jean-Christophe}
 }
 
+
 @article{Lewiner2010,
   author  = {Lewiner, Thomas and Mello, Vinícius and Peixoto, Adelailson and Pesco, Sinésio and Lopes, Hélio},
   title   = {Fast Generation of Pointerless {Octree} Duals},
@@ -1778,6 +1779,7 @@
   number  = {5},
   year    = {2010}
 }
+
 
 @article{Li2011,
   author  = {Li, Yangyan and Wu, Xiaokun and Chrysathou, Yiorgos and Sharf, Andrei and Cohen-Or, Daniel and Mitra, Niloy J.},
@@ -1794,7 +1796,6 @@
   booktitle = NeurIPS,
   year      = {2016}
 }
-
 
 @article{Li2017,
   author  = {Li, Jun and Xu, Kai and Chaudhuri, Siddhartha and Yumer, Ersin and Zhang, Hao and Guibas, Leonidas},
@@ -1819,6 +1820,8 @@
   booktitle = CVPR,
   year      = 2018
 }
+
+
 @article{Li2020,
   author  = {Xianzhi Li and Lequan Yu and Chi-Wing Fu and Daniel Cohen-Or and Pheng-Ann Heng},
   title   = {Unsupervised detection of distinctive regions on {3D} shapes},
@@ -1841,7 +1844,6 @@
   year    = {2021},
   journal = {arXiv preprint arXiv:2111.01353}
 }
-
 @article{Lim2016,
   author  = {Lim, Isaak and Gehre, Anne and Kobbelt, Leif},
   title   = {Identifying style of {3D} shapes using deep metric learning},
@@ -1857,6 +1859,13 @@
   booktitle    = AAAI,
   year         = {2018},
   howpublished = {arXiv:1706.07036 [cs.CV]}
+}
+
+@inproceedings{Lipman2021,
+  title     = {Phase Transitions, Distance Functions, and Implicit Neural Representations},
+  author    = {Lipman, Yaron},
+  booktitle = ICML,
+  year      = {2021}
 }
 
 @article{Liu2007,
@@ -2210,7 +2219,6 @@
   year      = {2018}
 }
 
-
 @inproceedings{Noh2015,
   author    = {Noh, Hyeonwoo and Hong, Seunghoon and Han, Bohyung},
   title     = {Learning deconvolution network for semantic segmentation},
@@ -2218,13 +2226,13 @@
   year      = {2015}
 }
 
-
 @inproceedings{Oechsle2019,
   title     = {Texture fields: Learning texture representations in function space},
   author    = {Oechsle, Michael and Mescheder, Lars and Niemeyer, Michael and Strauss, Thilo and Geiger, Andreas},
   booktitle = ICCV,
   year      = {2019}
 }
+
 
 @article{Ohtake2003,
   author  = {Ohtake, Yutaka and Belyaev, Alexander and Alexa, Marc and Turk, Greg and Seidel, Hans-Peter},
@@ -2234,6 +2242,7 @@
   volume  = {22},
   number  = {3}
 }
+
 
 @article{Osada2002,
   author  = {Osada, Robert and Funkhouser, Thomas and Chazelle, Bernard and Dobkin, David},
@@ -2400,7 +2409,6 @@
   year    = {2019}
 }
 
-
 @article{Rainer2020,
   author  = {Rainer, Gilles and Ghosh, Abhijeet and Jakob, Wenzel and Weyrich, Tim},
   title   = {Unified Neural Encoding of {BTFs}},
@@ -2409,7 +2417,6 @@
   number  = 2,
   year    = 2020
 }
-
 
 @article{Ray2009,
   author  = {Ray, Nicolas and Vallet, Bruno and Alonso, Laurent and L\'{e}vy, Bruno},
@@ -2420,12 +2427,14 @@
   number  = {1}
 }
 
+
 @book{Redko2019,
   title     = {Advances in Domain Adaptation Theory},
   author    = {Ievgen Redko and Amaury Habrard and Emilie Morvant and Marc Sebban and Younès Bennani},
   year      = {2019},
   publisher = {Elsevier}
 }
+
 
 @inproceedings{Ren2015,
   author    = {Shaoqing Ren and Kaiming He and Ross Girshick and Jian Sun},
@@ -2485,7 +2494,6 @@
   year      = 2019
 }
 
-
 @article{Rousseeuw1987,
   author  = {Peter J. Rousseeuw},
   title   = {Silhouettes: A graphical aid to the interpretation and validation of cluster analysis},
@@ -2494,7 +2502,6 @@
   volume  = {20},
   issn    = {0377-0427}
 }
-
 
 @article{Roveri2018,
   author  = {Roveri, Riccardo and \"{O}ztireli, A. Cengiz and Pandele, Ioana and Gross, Markus},
@@ -2505,12 +2512,14 @@
   number  = {2}
 }
 
+
 @inproceedings{Sabour2017,
   title     = {Dynamic routing between capsules},
   author    = {Sabour, Sara and Frosst, Nicholas and Hinton, Geoffrey E},
   booktitle = NeurIPS,
   year      = {2017}
 }
+
 
 @article{Sarbolandi2015,
   author  = {H. Sarbolandi and D. Lefloch and A. Kolb},
@@ -2573,14 +2582,12 @@
   number  = {6}
 }
 
-
 @article{Shao2018,
   title   = {{H-CNN}: spatial hashing based {CNN} for {3D} shape analysis},
   author  = {Shao, Tianjia and Yang, Yin and Weng, Yanlin and Hou, Qiming and Zhou, Kun},
   journal = TVCG,
   year    = {2018}
 }
-
 
 @article{Shapira2008,
   author  = {Shapira, Lior and Shamir, Ariel and Cohen-Or, Daniel},
@@ -2590,6 +2597,7 @@
   volume  = {24},
   number  = {4}
 }
+
 
 @article{Shapira2010,
   title   = {Contextual part analogies in {3D} objects},
@@ -2617,6 +2625,7 @@
   number  = {3},
   year    = {2007}
 }
+
 
 @inproceedings{Sharma2016,
   title     = {{VConv-DAE}: Deep volumetric shape learning without object labels},
@@ -2657,7 +2666,6 @@
   number  = {6}
 }
 
-
 @article{Shi2006,
   author  = {Shi, Lin and Yu, Yizhou and Bell, Nathan and Feng, Wei-Wen},
   title   = {A fast multigrid algorithm for mesh deformation},
@@ -2667,13 +2675,13 @@
   number  = {3}
 }
 
-
 @article{Shi2015,
   author  = {B. Shi and S. Bai and Z. Zhou and X. Bai},
   title   = {{DeepPano}: Deep panoramic representation for {3D} shape recognition},
   journal = {IEEE Signal Processing Letters},
   year    = {2015}
 }
+
 
 @article{Shi2021,
   title   = {Multi-dataset Pretraining: A Unified Model for Semantic Segmentation},
@@ -2697,6 +2705,7 @@
   year    = {2016},
   volume  = {43}
 }
+
 
 @article{Sidi2011,
   author  = {Oana Sidi and Oliver van Kaick and Yanir Kleiman and Hao Zhang and Daniel Cohen-Or},
@@ -2749,14 +2758,12 @@
   year      = {2019}
 }
 
-
 @inproceedings{Sitzmann2020,
   title     = {Implicit Neural Representations with Periodic Activation Functions},
   author    = {Sitzmann, Vincent and Martel, Julien NP and Bergman, Alexander W and Lindell, David B and Wetzstein, Gordon},
   booktitle = NeurIPS,
   year      = {2020}
 }
-
 
 @misc{Smith2017,
   author       = {Edward Smith and David Meger},
@@ -2765,12 +2772,14 @@
   year         = {2017}
 }
 
+
 @unpublished{Solomon2014,
   author = {Solomon, Justin and Crane, Keenan and Butscher, Adrian and Wojtan, Chris},
   title  = {A general framework for bilateral and mean shift filtering},
   note   = {arXiv:1405.4734 [cs.GR]},
   year   = {2014}
 }
+
 
 @inproceedings{Song2017,
   author    = {Song, Shuran and Yu, Fisher and Zeng, Andy and Chang, Angel X and Savva, Manolis and Funkhouser, Thomas},
@@ -2824,14 +2833,12 @@
   year      = {2018}
 }
 
-
 @inproceedings{Su2019,
   title     = {{VL-BERT}: Pre-training of generic visual-linguistic representations},
   author    = {Su, Weijie and Zhu, Xizhou and Cao, Yue and Li, Bin and Lu, Lewei and Wei, Furu and Dai, Jifeng},
   booktitle = ICLR,
   year      = {2020}
 }
-
 
 @article{Subr2009,
   author  = {Subr, Kartic and Soler, Cyril and Durand, Fr{\'e}do},
@@ -2842,6 +2849,7 @@
   number  = {5}
 }
 
+
 @article{Sun2007,
   author  = {Xianfang Sun and Rosin, P.~L. and Martin, R.~R. and Langbein, F.~C.},
   title   = {Fast and effective feature-preserving mesh denoising},
@@ -2850,6 +2858,7 @@
   volume  = {13},
   number  = {5}
 }
+
 
 @article{Sun2008,
   author  = {Sun, Xin and Zhou, Kun and Stollnitz, Eric and Shi, Jiaoying and Guo, Baining},
@@ -2895,7 +2904,6 @@
   number  = {6}
 }
 
-
 @article{Tagliasacchi2011,
   author  = {Tagliasacchi, Andrea and Olson, Matt and Zhang, Hao and Hamarneh, Ghassan and Cohen-Or, Daniel},
   title   = {{VASE}: Volume-Aware Surface Evolution for Surface Reconstruction from Incomplete Point Clouds},
@@ -2905,13 +2913,13 @@
   number  = {5}
 }
 
-
 @inproceedings{Takikawa2021,
   title     = {Neural Geometric Level of Detail: Real-time Rendering with Implicit {3D} Shapes},
   author    = {Towaki Takikawa and Joey Litalien and  Kangxue Yin and  Karsten Kreis and  Charles Loop and  Derek Nowrouzezahrai and  Alec Jacobson and  Morgan McGuire and  Sanja Fidler},
   year      = {2021},
   booktitle = CVPR
 }
+
 
 @article{Tan2019,
   title   = {{LXMERT}: Learning cross-modality encoder representations from transformers},
@@ -2928,7 +2936,6 @@
   year      = {2020}
 }
 
-
 @inproceedings{Tang2020,
   title     = {Searching efficient 3D architectures with sparse point-voxel convolution},
   author    = {Tang, Haotian and Liu, Zhijian and Zhao, Shengyu and Lin, Yujun and Lin, Ji and Wang, Hanrui and Han, Song},
@@ -2936,11 +2943,20 @@
   year      = {2020}
 }
 
+
 @article{Tang2021,
   title   = {{OctField}: Hierarchical Implicit Functions for {3D} Modeling},
   author  = {Tang, Jia-Heng and Chen, Weikai and Yang, Jie and Wang, Bo and Liu, Songrun and Yang, Bo and Gao, Lin},
   journal = NeurIPS,
   year    = {2021}
+}
+
+
+@inproceedings{Tang2021a,
+  title     = {{SA-ConvONet}: Sign-Agnostic Optimization of Convolutional Occupancy Networks},
+  author    = {Tang, Jiapeng and Lei, Jiabao and Xu, Dan and Ma, Feiying and Jia, Kui and Zhang, Lei},
+  booktitle = ICCV,
+  year      = {2021}
 }
 
 @article{Tarini2004,
@@ -2959,13 +2975,13 @@
   year      = {2002}
 }
 
-
 @inproceedings{Tatarchenko2016,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
   title     = {Multi-view {3D} models from single images with a convolutional network},
   booktitle = ECCV,
   year      = {2016}
 }
+
 
 @inproceedings{Tatarchenko2017,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
@@ -2988,7 +3004,6 @@
   year      = 2019
 }
 
-
 @inproceedings{Tian2020,
   title     = {Contrastive multiview coding},
   author    = {Tian, Yonglong and Krishnan, Dilip and Isola, Phillip},
@@ -3003,6 +3018,7 @@
   booktitle = IROS,
   year      = {2017}
 }
+
 
 @inproceedings{Tomasi1998,
   author    = {C. Tomasi and R. Manduchi},
@@ -3234,7 +3250,6 @@
   year    = {2020}
 }
 
-
 @inproceedings{Wang2021,
   title     = {Unsupervised {3D} Learning for Shape Analysis via Multiresolution Instance Discrimination},
   author    = {Wang, Peng-Shuai and Yang, Yu-Qi and Zou, Qian-Fang and Wu, Zhirong and Liu, Yang and Tong, Xin},
@@ -3249,6 +3264,7 @@
   booktitle = {IJCAI},
   year      = {2021}
 }
+
 
 @misc{Warehouse2018,
   author = {3D Warehouse},
@@ -3280,6 +3296,13 @@
   year    = {1992},
   volume  = {11},
   number  = {3}
+}
+
+@article{Williams2021,
+  title   = {Neural Fields as Learnable Kernels for {3D} Reconstruction},
+  author  = {Williams, Francis and Gojcic, Zan and Khamis, Sameh and Zorin, Denis and Bruna, Joan and Fidler, Sanja and Litany, Or},
+  journal = {arXiv preprint arXiv:2111.13674},
+  year    = {2021}
 }
 
 @article{Wu2005,
