--- a/reference.bib
+++ b/reference.bib
@@ -37,6 +37,7 @@
   year      = {2018}
 }
 
+
 @article{Adams2009,
   author  = {Adams, Andrew and Gelfand, Natasha and Dolson, Jennifer and Levoy, Marc},
   title   = {Gaussian {KD-trees} for fast high-dimensional filtering},
@@ -45,7 +46,6 @@
   volume  = {28},
   number  = {3}
 }
-
 
 @article{Adams2010,
   author  = {Adams, Andrew and Baek, Jongmin and Davis, Myers Abraham},
@@ -80,6 +80,7 @@
   year      = {2020}
 }
 
+
 @article{Alhashim2012,
   author  = {Alhashim, Ibraheem and Zhang, Hao and Liu, Ligang},
   title   = {Detail-replicating shape stretching},
@@ -89,13 +90,13 @@
   number  = {12}
 }
 
-
 @inproceedings{Andersen2009,
   author    = {Andersen, Vedrana and Desbrun, Mathieu and B{\ae}rentzen, J. Andreas and Aan{\ae}s, Henrik},
   title     = {Height and tilt geometric texture},
   booktitle = {Proc. of the 5th International Symposium on Advances in Visual Computing: Part I},
   year      = {2009}
 }
+
 
 @inproceedings{Ankerst1999,
   author    = {Ankerst, Mihael and Kastenm{\"u}ller, Gabiand Kriegel, Hans-Peter and Seidl, Thomas},
@@ -111,7 +112,6 @@
   year      = {2019}
 }
 
-
 @inproceedings{Armeni2016,
   title     = {{3D} Semantic Parsing of Large-Scale Indoor Spaces},
   author    = {Iro Armeni and Ozan Sener and Amir R. Zamir and Helen Jiang and Ioannis Brilakis and Martin Fischer and Silvio Savarese},
@@ -126,6 +126,7 @@
   journal = {arXiv preprint},
   year    = {2017}
 }
+
 
 @inproceedings{Arthur2007,
   author    = {Arthur, David and Vassilvitskii, Sergei},
@@ -213,13 +214,13 @@
   year      = {2016}
 }
 
-
 @inproceedings{Bai2021,
   title     = {Unsupervised multi-source domain adaptation for person re-identification},
   author    = {Bai, Zechen and Wang, Zhigang and Wang, Jian and Hu, Di and Ding, Errui},
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @article{Bailey2018,
   author  = {Bailey, Stephen W. and Otte, Dave and Dilorenzo, Paul and O'Brien, James F.},
@@ -297,13 +298,13 @@
   number  = {2}
 }
 
-
 @inproceedings{Bogo2014,
   title     = {{FAUST}: Dataset and evaluation for {3D} mesh registration},
   author    = {Bogo, Federica and Romero, Javier and Loper, Matthew and Black, Michael J},
   booktitle = CVPR,
   year      = {2014}
 }
+
 
 @inproceedings{Bogo2017,
   title     = {Dynamic {FAUST}: Registering human bodies in motion},
@@ -330,7 +331,6 @@
   number  = {4}
 }
 
-
 @article{Bommes2013a,
   author  = {Bommes, David and L\'{e}vy, Bruno and Pietroni, Nico and Puppo, Enrico and Silva, Claudio and Tarini, Marco and Zorin, Denis},
   title   = {Quad-mesh generation and processing: a survey},
@@ -339,6 +339,7 @@
   volume  = {32},
   number  = {6}
 }
+
 
 @article{Boscaini2015,
   author  = {Boscaini, Davide and Masci, Jonathan and Melzi, Simone and Bronstein, Michael M and Castellani, Umberto and Vandergheynst, Pierre},
@@ -481,7 +482,7 @@
 @article{Chang2015,
   title   = {{ShapeNet}: An information-rich {3D} model repository},
   author  = {Chang, Angel X. and Funkhouser, Thomas and Guibas, Leonidas and Hanrahan, Pat and Huang, Qixing and Li, Zimo and Savarese, Silvio and Savva, Manolis and Song, Shuran and Su, Hao and Xiao, Jianxiong and Yi, Li and Yu, Fisher},
-  journal = {arXiv:1512.03012},
+  journal = {arXiv preprint arXiv:1512.03012},
   year    = {2015}
 }
 
@@ -508,7 +509,6 @@
   booktitle = CGF
 }
 
-
 @article{Chen2009,
   author  = {Xiaobai Chen and Aleksey Golovinskiy and Thomas Funkhouser},
   title   = {A benchmark for {3D} mesh segmentation},
@@ -517,6 +517,7 @@
   volume  = {28},
   number  = {3}
 }
+
 
 @inproceedings{Chen2014,
   author    = {Chen, Dong and Ren, Shaoqing and Wei, Yichen and Cao, Xudong and Sun, Jian},
@@ -548,7 +549,6 @@
   year      = {2019}
 }
 
-
 @inproceedings{Chen2020,
   title     = {A simple framework for contrastive learning of visual representations},
   author    = {Chen, Ting and Kornblith, Simon and Norouzi, Mohammad and Hinton, Geoffrey},
@@ -564,6 +564,7 @@
   year      = {2020}
 }
 
+
 @inproceedings{Chen2021,
   author    = {Xinlei Chen and Kaiming He},
   title     = {Exploring Simple Siamese Representation Learning},
@@ -578,7 +579,6 @@
   year      = {2020}
 }
 
-
 @article{Cho2014,
   author  = {Cho, Hojin and Lee, Hyunjoon and Kang, Henry and Lee, Seungyong},
   title   = {Bilateral texture filtering},
@@ -587,6 +587,7 @@
   volume  = {33},
   number  = {4}
 }
+
 
 @inproceedings{Choy2016,
   author    = {Choy, Christopher B and Xu, Danfei and Gwak, JunYoung and Chen, Kevin and Savarese, Silvio},
@@ -601,7 +602,6 @@
   booktitle = CVPR,
   year      = {2019}
 }
-
 
 @article{Chuang2011,
   author  = {Chuang, Ming and Kazhdan, Michael},
@@ -621,6 +621,7 @@
   volume  = {17},
   number  = {2}
 }
+
 
 @inproceedings{Clarenz2000,
   author    = {Clarenz, Ulrich and Diewald, Udo and Rumpf, Martin},
@@ -830,7 +831,6 @@
   number  = {19}
 }
 
-
 @article{Fan2010,
   author  = {Hanqi Fan and Yizhou Yu and Qunsheng Peng},
   title   = {Robust feature-preserving mesh denoising based on consistent subneighborhoods},
@@ -848,6 +848,7 @@
   year      = {2017}
 }
 
+
 @inproceedings{Fanello2014,
   author    = {Fanello, S.R. and Keskin, C. and Kohli, P. and Izadi, S. and Shotton, J. and Criminisi, A. and Pattacini, U. and Paek, T.},
   title     = {Filter forests for learning data-dependent convolutional kernels},
@@ -855,12 +856,19 @@
   year      = {2014}
 }
 
-
 @inproceedings{Fey2018,
   title     = {{SplineCNN}: Fast Geometric Deep Learning with Continuous {B}-Spline Kernels},
   author    = {Fey, Matthias and Lenssen, Jan Eric and Weichert, Frank and M{\"u}ller, Heinrich},
   booktitle = CVPR,
   year      = {2018}
+}
+
+
+@inproceedings{Fey2019,
+  title     = {Fast Graph Representation Learning with {PyTorch Geometric}},
+  author    = {Fey, Matthias and Lenssen, Jan Eric},
+  booktitle = {ICLR Workshop},
+  year      = {2019}
 }
 
 @inproceedings{Firman2016,
