--- a/reference.bib
+++ b/reference.bib
@@ -47,6 +47,7 @@
   number  = {3}
 }
 
+
 @article{Adams2010,
   author  = {Adams, Andrew and Baek, Jongmin and Davis, Myers Abraham},
   title   = {Fast high-dimensional filtering using the permutohedral lattice},
@@ -55,7 +56,6 @@
   volume  = {29},
   number  = {2}
 }
-
 
 @inproceedings{Adamson2003,
   author    = {Adamson, Anders and Alexa, Marc},
@@ -90,6 +90,7 @@
   number  = {12}
 }
 
+
 @inproceedings{Andersen2009,
   author    = {Andersen, Vedrana and Desbrun, Mathieu and B{\ae}rentzen, J. Andreas and Aan{\ae}s, Henrik},
   title     = {Height and tilt geometric texture},
@@ -97,13 +98,13 @@
   year      = {2009}
 }
 
-
 @inproceedings{Ankerst1999,
   author    = {Ankerst, Mihael and Kastenm{\"u}ller, Gabiand Kriegel, Hans-Peter and Seidl, Thomas},
   booktitle = {Advances in Spatial Databases},
   title     = {{3D} shape histograms for similarity search and classification in spatial databases},
   year      = {1999}
 }
+
 
 @inproceedings{Aoki2019,
   author    = {Aoki, Yasuhiro and Goforth, Hunter and Arun Srivatsan, Rangaprasad and Lucey, Simon},
@@ -119,7 +120,6 @@
   year      = {2016}
 }
 
-
 @article{Armeni2017,
   title   = {Joint {2D-3D}-Semantic Data for Indoor Scene Understanding},
   author  = {Armeni, Iro and Sax, Sasha and Zamir, Amir R and Savarese, Silvio},
@@ -134,6 +134,7 @@
   booktitle = {SODA},
   year      = {2007}
 }
+
 
 @article{Attene2013,
   author  = {Attene, Marco and Campen, Marcel and Kobbelt, Leif},
@@ -221,7 +222,6 @@
   year      = {2021}
 }
 
-
 @article{Bailey2018,
   author  = {Bailey, Stephen W. and Otte, Dave and Dilorenzo, Paul and O'Brien, James F.},
   title   = {Fast and Deep Deformation Approximations},
@@ -230,6 +230,7 @@
   number  = {4},
   journal = SIG
 }
+
 
 @article{Bailey2020,
   title   = {Fast and deep facial deformations},
@@ -305,13 +306,13 @@
   year      = {2014}
 }
 
-
 @inproceedings{Bogo2017,
   title     = {Dynamic {FAUST}: Registering human bodies in motion},
   author    = {Bogo, Federica and Romero, Javier and Pons-Moll, Gerard and Black, Michael J},
   booktitle = CVPR,
   year      = {2017}
 }
+
 
 @article{Bommes2009,
   author  = {Bommes, David and Zimmer, Henrik and Kobbelt, Leif},
@@ -340,7 +341,6 @@
   number  = {6}
 }
 
-
 @article{Boscaini2015,
   author  = {Boscaini, Davide and Masci, Jonathan and Melzi, Simone and Bronstein, Michael M and Castellani, Umberto and Vandergheynst, Pierre},
   title   = {Learning class-specific descriptors for deformable shapes using localized spectral convolutional networks},
@@ -349,6 +349,7 @@
   volume  = {34},
   number  = {5}
 }
+
 
 @inproceedings{Boscaini2016,
   author    = {Boscaini, Davide and Masci, Jonathan and Rodol\`a, Emanuele and Bronstein, Michael M.},
@@ -518,13 +519,13 @@
   number  = {3}
 }
 
-
 @inproceedings{Chen2014,
   author    = {Chen, Dong and Ren, Shaoqing and Wei, Yichen and Cao, Xudong and Sun, Jian},
   title     = {Joint cascade face detection and alignment},
   booktitle = {ECCV},
   year      = {2014}
 }
+
 
 @article{Chen2018,
   author  = {L. {Chen} and G. {Papandreou} and I. {Kokkinos} and K. {Murphy} and A. L. {Yuille}},
@@ -556,7 +557,6 @@
   year      = {2020}
 }
 
-
 @inproceedings{Chen2020a,
   title     = {Big Self-Supervised Models are Strong Semi-Supervised Learners},
   author    = {Chen, Ting and Kornblith, Simon and Swersky, Kevin and Norouzi, Mohammad and Hinton, Geoffrey},
@@ -571,6 +571,7 @@
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @inproceedings{Chibane2020,
   title     = {Implicit functions in feature space for 3d shape reconstruction and completion},
@@ -588,13 +589,13 @@
   number  = {4}
 }
 
-
 @inproceedings{Choy2016,
   author    = {Choy, Christopher B and Xu, Danfei and Gwak, JunYoung and Chen, Kevin and Savarese, Silvio},
   title     = {{3D-R2N2}: A unified approach for single and multi-view {3D} object reconstruction},
   booktitle = ECCV,
   year      = {2016}
 }
+
 
 @inproceedings{Choy2019,
   author    = {Choy, Christopher and Gwak, JunYoung and Savarese, Silvio},
@@ -612,7 +613,6 @@
   number  = {4}
 }
 
-
 @article{Cignoni1998,
   author  = {P. Cignoni and C. Rocchini and R. Scopigno},
   title   = {Metro: measuring error on simplified surfaces},
@@ -629,6 +629,7 @@
   booktitle = {Proc. of the conference on Visualization},
   year      = {2000}
 }
+
 
 @article{Cohen2018,
   title   = {Spherical {CNNs}},
@@ -840,7 +841,6 @@
   number  = {2}
 }
 
-
 @inproceedings{Fan2017,
   author    = {Fan, Haoqiang and Su, Hao and Guibas, Leonidas},
   title     = {A point set generation network for {3D} object reconstruction from a single image},
@@ -856,6 +856,7 @@
   year      = {2014}
 }
 
+
 @inproceedings{Fey2018,
   title     = {{SplineCNN}: Fast Geometric Deep Learning with Continuous {B}-Spline Kernels},
   author    = {Fey, Matthias and Lenssen, Jan Eric and Weichert, Frank and M{\"u}ller, Heinrich},
@@ -863,13 +864,13 @@
   year      = {2018}
 }
 
-
 @inproceedings{Fey2019,
   title     = {Fast Graph Representation Learning with {PyTorch Geometric}},
   author    = {Fey, Matthias and Lenssen, Jan Eric},
   booktitle = {ICLR Workshop},
   year      = {2019}
 }
+
 
 @inproceedings{Firman2016,
   author    = {Michael Firman and Oisin Mac Aodha and Simon Julier and Gabriel J. Brostow},
@@ -985,7 +986,6 @@
   number  = {3}
 }
 
-
 @book{Goodfellow2016,
   title     = {Deep Learning},
   year      = {2016},
@@ -1000,6 +1000,7 @@
   booktitle = NeurIPS,
   year      = {2016}
 }
+
 
 @inproceedings{Graham2015,
   author    = {Ben Graham},
@@ -1052,7 +1053,6 @@
   number  = {3}
 }
 
-
 @misc{Guennebaud2010,
   author       = {Ga\"{e}l Guennebaud and Beno\^{i}t Jacob and others},
   title        = {Eigen v3},
@@ -1068,6 +1068,7 @@
   year    = {2018},
   volume  = {37}
 }
+
 
 @article{Guo2015,
   author  = {Guo, Kan and Zou, Dongqing and Chen, Xiaowu},
@@ -1662,7 +1663,6 @@
   volume    = {1666}
 }
 
-
 @article{Kopf2007,
   author  = {Kopf, Johannes and Cohen, Michael F. and Lischinski, Dani and Uyttendaele, Matt},
   title   = {Joint bilateral upsampling},
@@ -1671,6 +1671,7 @@
   volume  = {26},
   number  = {3}
 }
+
 
 @inproceedings{Kraehenbuehl2011,
   author    = {Kr{\"a}henb{\"u}hl, Philipp and Koltun, Vladlen},
@@ -1778,7 +1779,6 @@
   editor    = {Jiao, Xiangmin and Weill, Jean-Christophe}
 }
 
-
 @article{Lewiner2010,
   author  = {Lewiner, Thomas and Mello, Vinícius and Peixoto, Adelailson and Pesco, Sinésio and Lopes, Hélio},
   title   = {Fast Generation of Pointerless {Octree} Duals},
@@ -1797,6 +1797,7 @@
   volume  = {30},
   number  = {4}
 }
+
 
 @inproceedings{Li2016,
   author    = {Yangyan Li and Soeren Pirk and Hao Su and Charles R. Qi and Leonidas J. Guibas},
@@ -1829,13 +1830,13 @@
   year      = 2018
 }
 
-
 @article{Li2020,
   author  = {Xianzhi Li and Lequan Yu and Chi-Wing Fu and Daniel Cohen-Or and Pheng-Ann Heng},
   title   = {Unsupervised detection of distinctive regions on {3D} shapes},
   journal = TOG,
   year    = {2020}
 }
+
 
 @article{Li2021,
   title   = {{SP-GAN}: Sphere-Guided {3D} Shape Generation and Manipulation},
@@ -1852,6 +1853,7 @@
   year    = {2021},
   journal = {arXiv preprint arXiv:2111.01353}
 }
+
 @article{Lim2016,
   author  = {Lim, Isaak and Gehre, Anne and Kobbelt, Leif},
   title   = {Identifying style of {3D} shapes using deep metric learning},
@@ -1860,7 +1862,6 @@
   volume  = {35},
   number  = {5}
 }
-
 @inproceedings{Lin2018,
   author       = {Lin, Chen-Hsuan and Kong, Chen and Lucey, Simon},
   title        = {Learning efficient point cloud generation for dense {3D} object reconstruction},
@@ -2241,7 +2242,6 @@
   year      = {2019}
 }
 
-
 @article{Ohtake2003,
   author  = {Ohtake, Yutaka and Belyaev, Alexander and Alexa, Marc and Turk, Greg and Seidel, Hans-Peter},
   title   = {Multi-level partition of unity implicits},
@@ -2260,6 +2260,7 @@
   number  = {4},
   year    = {2002}
 }
+
 
 @article{Oztireli2009,
   title   = {Feature preserving point set surfaces based on non-linear kernel regression},
@@ -2435,7 +2436,6 @@
   number  = {1}
 }
 
-
 @book{Redko2019,
   title     = {Advances in Domain Adaptation Theory},
   author    = {Ievgen Redko and Amaury Habrard and Emilie Morvant and Marc Sebban and Younès Bennani},
@@ -2450,6 +2450,7 @@
   booktitle = NeurIPS,
   year      = {2015}
 }
+
 
 @article{Ren2017,
   author  = {Ren, Mengwei and Niu, Liang and Fang, Yi},
@@ -2520,7 +2521,6 @@
   number  = {2}
 }
 
-
 @inproceedings{Sabour2017,
   title     = {Dynamic routing between capsules},
   author    = {Sabour, Sara and Frosst, Nicholas and Hinton, Geoffrey E},
@@ -2536,6 +2536,7 @@
   year    = {2015},
   volume  = {13}
 }
+
 
 @inproceedings{Sauder2019,
   author    = {Jonathan Sauder and Bjarne Sievers},
@@ -2606,7 +2607,6 @@
   number  = {4}
 }
 
-
 @article{Shapira2010,
   title   = {Contextual part analogies in {3D} objects},
   author  = {Shapira, Lior and Shalom, Shy and Shamir, Ariel and Cohen-Or, Daniel and Zhang, Hao},
@@ -2625,6 +2625,7 @@
   number  = {3}
 }
 
+
 @article{Sharf2007,
   title   = {Interactive topology-aware surface reconstruction},
   author  = {Sharf, Andrei and Lewiner, Thomas and Shklarski, Gil and Toledo, Sivan and Cohen-Or, Daniel},
@@ -2634,13 +2635,13 @@
   year    = {2007}
 }
 
-
 @inproceedings{Sharma2016,
   title     = {{VConv-DAE}: Deep volumetric shape learning without object labels},
   author    = {Sharma, Abhishek and Grau, Oliver and Fritz, Mario},
   booktitle = ECCV,
   year      = {2016}
 }
+
 
 @inproceedings{Sharma2018,
   author    = {Gopal Sharma and Rishabh Goyal and Difan Liu and Evangelos Kalogerakis and Subhransu Maji},
@@ -2690,7 +2691,6 @@
   year    = {2015}
 }
 
-
 @article{Shi2021,
   title   = {Multi-dataset Pretraining: A Unified Model for Semantic Segmentation},
   author  = {Shi, Bowen and Zhang, Xiaopeng and Xu, Haohang and Dai, Wenrui and Zou, Junni and Xiong, Hongkai and Tian, Qi},
@@ -2706,6 +2706,7 @@
   year    = {2019}
 }
 
+
 @article{Shu2016,
   author  = {Zhenyu Shu and Chengwu Qi and Shiqing Xin and Chao Hu and Li Wang and Yu Zhang and Ligang Liu},
   title   = {Unsupervised {3D} shape segmentation and co-segmentation via deep learning},
@@ -2713,7 +2714,6 @@
   year    = {2016},
   volume  = {43}
 }
-
 
 @article{Sidi2011,
   author  = {Oana Sidi and Oliver van Kaick and Yanir Kleiman and Hao Zhang and Daniel Cohen-Or},
@@ -2723,6 +2723,7 @@
   volume  = {30},
   number  = {6}
 }
+
 
 @inproceedings{Silva2002,
   author    = {Silva, Vin D and Tenenbaum, Joshua B},
@@ -2780,7 +2781,6 @@
   year         = {2017}
 }
 
-
 @unpublished{Solomon2014,
   author = {Solomon, Justin and Crane, Keenan and Butscher, Adrian and Wojtan, Chris},
   title  = {A general framework for bilateral and mean shift filtering},
@@ -2795,6 +2795,7 @@
   booktitle = CVPR,
   year      = {2017}
 }
+
 
 @online{Song2019,
   author       = {Shuran Song},
@@ -2857,7 +2858,6 @@
   number  = {5}
 }
 
-
 @article{Sun2007,
   author  = {Xianfang Sun and Rosin, P.~L. and Martin, R.~R. and Langbein, F.~C.},
   title   = {Fast and effective feature-preserving mesh denoising},
@@ -2876,6 +2876,7 @@
   volume  = {27},
   number  = {3}
 }
+
 
 @article{Sun2009,
   author  = {Xianfang Sun and Paul L. Rosin and Ralph R. Martin and Frank C. Langbein},
@@ -2928,7 +2929,6 @@
   booktitle = CVPR
 }
 
-
 @article{Tan2019,
   title   = {{LXMERT}: Learning cross-modality encoder representations from transformers},
   author  = {Tan, Hao and Bansal, Mohit},
@@ -2944,13 +2944,13 @@
   year      = {2020}
 }
 
+
 @inproceedings{Tang2020,
   title     = {Searching efficient 3D architectures with sparse point-voxel convolution},
   author    = {Tang, Haotian and Liu, Zhijian and Zhao, Shengyu and Lin, Yujun and Lin, Ji and Wang, Hanrui and Han, Song},
   booktitle = ECCV,
   year      = {2020}
 }
-
 
 @article{Tang2021,
   title   = {{OctField}: Hierarchical Implicit Functions for {3D} Modeling},
@@ -2966,6 +2966,7 @@
   booktitle = ICCV,
   year      = {2021}
 }
+
 
 @article{Tarini2004,
   author  = {Tarini, Marco and Hormann, Kai and Cignoni, Paolo and Montani, Claudio},
@@ -2990,13 +2991,13 @@
   year      = {2016}
 }
 
-
 @inproceedings{Tatarchenko2017,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
   title     = {Octree generating networks: efficient convolutional architectures for high-resolution {3D} outputs},
   booktitle = ICCV,
   year      = {2017}
 }
+
 
 @inproceedings{Taubin1995,
   author    = {Taubin, Gabriel},
@@ -3019,7 +3020,6 @@
   year      = {2020}
 }
 
-
 @inproceedings{Tobin2017,
   title     = {Domain randomization for transferring deep neural networks from simulation to the real world},
   author    = {Tobin, Josh and Fong, Rachel and Ray, Alex and Schneider, Jonas and Zaremba, Wojciech and Abbeel, Pieter},
@@ -3034,6 +3034,7 @@
   booktitle = ICCV,
   year      = {1998}
 }
+
 
 @inproceedings{Tulsiani2017,
   author    = {Tulsiani, Shubham and Zhou, Tinghui and Efros, Alexei A and Malik, Jitendra},
@@ -3265,7 +3266,6 @@
   year      = {2021}
 }
 
-
 @inproceedings{Wang2021a,
   title     = {Generalizing to unseen domains: A survey on domain generalization},
   author    = {Wang, Jindong and Lan, Cuiling and Liu, Chang and Ouyang, Yidong and Zeng, Wenjun and Qin, Tao},
@@ -3280,6 +3280,7 @@
   year   = {2018},
   url    = {https://3dwarehouse.sketchup.com/?hl=en}
 }
+
 
 @article{Wei2015,
   author  = {Mingqiang Wei and Jinze Yu and Wai-Man Pang and Jun Wang and Jing Qin and Ligang Liu and Pheng-Ann Heng},
@@ -3306,7 +3307,14 @@
   number  = {3}
 }
 
-@article{Williams2021,
+@inproceedings{Williams2021,
+  title     = {Neural splines: Fitting {3D} surfaces with infinitely-wide neural networks},
+  author    = {Williams, Francis and Trager, Matthew and Bruna, Joan and Zorin, Denis},
+  booktitle = CVPR,
+  year      = {2021}
+}
+
+@article{Williams2021a,
   title   = {Neural Fields as Learnable Kernels for {3D} Reconstruction},
   author  = {Williams, Francis and Gojcic, Zan and Khamis, Sameh and Zorin, Denis and Bruna, Joan and Fidler, Sanja and Litany, Or},
   journal = {arXiv preprint arXiv:2111.13674},
