--- a/reference.bib
+++ b/reference.bib
@@ -33,7 +33,7 @@
 @inproceedings{Achlioptas2018,
   author    = {Panos Achlioptas and Olga Diamanti and Ioannis Mitliagkas and Leonidas Guibas},
   title     = {Learning representations and generative models for {3D} point clouds},
-  booktitle = ICLR,
+  booktitle = ICML,
   year      = {2018}
 }
 
