--- a/reference.bib
+++ b/reference.bib
@@ -1039,7 +1039,7 @@
 
 @inproceedings{Groueix2018,
   author    = {Thibault Groueix and Matthew Fisher and Vladimir G. Kim and Bryan C. Russell and Mathieu Aubry},
-  title     = {{AtlasNet: A Papier-M\^{a}ch\'{e}} approach to learning {3D} surface generation},
+  title     = {{AtlasNet}: A {Papier-M\^{a}ch\'{e}} approach to learning {3D} surface generation},
   booktitle = CVPR,
   year      = {2018}
 }
